msa/configs/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-ns
  labels:
    name: profi-ns
