msa/configs/03_srv_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiuser
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profiuser-label
  template:
    metadata:
      labels: 
        app: profiuser-label
    spec:
      containers:
        - name: profiuser
          image: alekseybondarev/profi-user:v1
          ports:
            - name: web
              containerPort: 8000
