msa/configs/08_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-user-service
  labels:
    app: postgresdb
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: postgresdb
