msa/configs/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-user-service
  labels:
    app: db
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: db

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-user-statefulset
spec:
  serviceName: "db-user-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        command: ["psql",  "-U", "postgres", -c"]
        args:
          - CREATE ROLE IF NOT EXISTS profi LOGIN password 'profi1' SUPERUSER;
            CREATE DATABASE IF NOT EXISTS logins WITH OWNER = profi ENCODING = 'UTF8' CONNECTION LIMIT = -1 IS_TEMPLATE = False;
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgredb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
