msa/configs/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /health

spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
#          - path: /otusapp/aleksey
#            pathType: Exact
#            backend:
#              service:
#                name: hello-service
#                port: 
#                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: profiuser-service
                port: 
                  number: 8000
